# editor_05

./: CMakeLists.txt
.github/workflows/: release.yml
include/: controller.hpp  model.hpp  primitives.hpp  view.hpp
src/: controller.cpp  main.cpp  model.cpp  primitives.cpp  view.cpp
